refactor: fake dao를 생성해, service를 순수 자바 테스트로 변경